<resources>
    <string name="app_name">MeriSafety</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fb_login_protocol_scheme">fb429196797477314</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="aboutapp">MeriSafety app provides that needed safety to everyone who downloads it.  All you have to do is create an account on this app and register a guardian\'s contact details and email details.\n\nWhenever you are in an emergency, be it medical, transportation, harassment you can press on the required button.\n\nMeriSafety app will automatically call your registered guardian and also E-mail and message them your current location.\n\nThis app will help you by showing you the nearby hospitals, bus stops, police stations.  Once you feel you are out of danger, you can also de-activate your alert. The message for the same will be delivered to your registered guardian.</string>
    <string name="about_abhi">He worked on the documentation of the whole Application, etc.</string>
    <string name="about_paras">Team Leader and worked efficient to control, manage, test, debug, and finalize the whole app, etc.</string>
    <string name="about_priya">She worked fluently on the UI, functionality, and maps of the app, etc.</string>
    <string name="about_ridhi">She worked on the Core UI of the App including login, signup, team, about in the app, etc.</string>
    <string name="about_sid">He worked on the complete Database Connectivity and program flow of the app, etc.</string>
    <string name="about_sunny">He worked on the Maps, Permissions and the contact retrieval in the app, etc.</string>
    <string name="self_defence">The condition of being protected from or unlikely to cause danger, risk, or injury is safety.\n\nThe defence of one\'s person or interests, especially through the use of physical force, which is permitted in certain cases as an answer to a charge of violent crime.\n\nFive Self-Defenence moves you must know.\n\n1. Open Hand Strike.\n\n2. Kick to the groin.\n\n3. 360 or outside defence.\n\n4. Handbag grab or any aggressive grab.\n\n5. Attack from the ground.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="app_widget_text">SaveMe</string>
    <string name="add_widget">Add widget</string>

    <!-- String related Settings created by paras -->
    <string name="pref_description_hot_key">Turning this feature on will send \'Save Me Alert\' when user press 3 times power button</string>
    <string name="pref_title_hot_key">Hot key</string>
    <string name="nearby_user_default_value">1</string>
    <string name="privacy_location_summary">Turning this feature on will save your location to the server</string>
    <string name="privacy_location_title">Location</string>
    <string name="privacy_share_location_summary">When Enabled nearby people will see you on map</string>
    <string name="privacy_share_location_title">Share Location</string>
    <string name="privacy_nearby_users_title">Nearby users can see</string>
    <string name="low_alert_toast">This alert will only call your guardian</string>
    <string name="save_me_toast">This alert will call, mail and message your guardian and show the location of other users also.</string>
    <string name="high_alert_toast">This alert will call and message your guardian</string>
    <string name="advance_alert_toast">This alert will call, mail and message your guardian</string>
    <string name="self_defence_toast">This will help you learn some basics moves.</string>
    <string name="home">Home</string>
    <string name="gaurdian">Gaurdian</string>
    <string name="all_police_station">All Police Station</string>
    <string name="helpine_nos">Helpine Nos</string>
    <string name="nearby">Nearby</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="about_the_app">About the App</string>
    <string name="team">Team</string>
    <string name="we_need_some_extra_information">We need some extra information</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_mobile_number_here">Enter your number here</string>
    <string name="if_not_receiving_otp_then_check_network_strenth">If you are not receiving OTP then make sure you entered number with country code and have good network strength</string>
    <string name="we_don_t_share_your_information_with_any_third_party_organizations">We don\'t share your information with any third party organizations.</string>
    <string name="proceed">Proceed</string>
    <string name="self">Self Defence</string>

    <string-array name="nearby_users_list_titles">
        <item>Name</item>
        <item>Mobile Number</item>
        <item>Email</item>
    </string-array>
    <string-array name="nearby_users_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>