<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="Privacy"
        android:key="privacy"
        android:fragment="com.developers.droidteam.merisafety.SettingsActivity$MyPreferenceFragment"
        >

        <SwitchPreference
            android:defaultValue="true"
            android:key="location"
            android:summary="Turning this feature on will save your location to the server"
            android:title="Location" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="share_location"
            android:summary="When Enabled nearby people will see you on map "
            android:title="Share Location" />

        <MultiSelectListPreference
            android:title="Nearby users can see "
            android:key="nearby_users_sharing"
            android:entries="@array/nearby_users_list_titles"
            android:entryValues="@array/nearby_users_list_values"
            android:defaultValue="1"
            />


    </PreferenceCategory>

<PreferenceCategory
    android:layout="@layout/preference_category_layout"
    android:title="Alert"
    android:key="gen"
    android:fragment="com.developers.droidteam.merisafety.SettingsActivity$MyPreferenceFragment"
    >

    <SwitchPreference
        android:defaultValue="true"
        android:key="hot_key"
        android:summary="@string/pref_description_hot_key"
        android:title="@string/pref_title_hot_key" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="send_msg"
        android:title="Message"
        android:summary="Send Message to guardian"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="dial_call"
        android:title="Call"
        android:summary="Dial call to guardian"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="send_email"
        android:title="Email"
        android:summary="Send Email to guardians"
        />

</PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/pref_header_notifications"
        android:key="notification"
        >

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/pref_header_data_sync"
        android:key="data_sync"
        >
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>