<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:tag="team"
    android:layout_height="match_parent"
    tools:context="com.developers.droidteam.merisafety.Frag_team">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_background"
            android:text="The Brains Behind MeriSafety"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#000"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_margin="2dp"
           android:padding="2dp"
           android:background="@drawable/text_background"
           android:layout_weight="2"
           android:orientation="horizontal">
           <FrameLayout
               android:layout_width="140dp"
               android:layout_margin="3dp"
               android:layout_height="140dp">

               <ImageView
                   android:layout_width="140dp"
                   android:layout_height="140dp"
                   android:src="@drawable/abhi_new" />

           </FrameLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:orientation="vertical"
             android:layout_weight="2">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Abhinav"
                   android:layout_gravity="start"
                   android:textStyle="italic"
                   android:textSize="25sp"
                   android:textColor="#000"/>
               <TextView
                   android:layout_margin="2dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/about_abhi"
                   android:textAlignment="viewStart"
                   android:textStyle="italic"
                   android:textSize="18sp"
                   android:textColor="@color/Dark_grey_text"/>
           </LinearLayout>
          </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:background="@drawable/text_background"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paras"
                    android:layout_gravity="right"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:textColor="#000"/>
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_paras"
                    android:textAlignment="viewEnd"
                    android:background="@drawable/text_background"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:textColor="@color/Dark_grey_text"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="140dp"
                android:layout_margin="3dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/par_new" />
            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="2dp"
            android:background="@drawable/text_background"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="140dp"
                android:layout_margin="3dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/pri1_new" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Priya"
                    android:layout_gravity="left"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:textColor="#000"/>
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_priya"
                    android:textAlignment="viewStart"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:textColor="@color/Dark_grey_text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="2dp"
            android:background="@drawable/text_background"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ridhima"
                    android:layout_gravity="right"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:textColor="#000"/>
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_ridhi"
                    android:textAlignment="viewEnd"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:textColor="@color/Dark_grey_text"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="140dp"
                android:layout_margin="3dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/rid_new" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="2dp"
            android:background="@drawable/text_background"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="140dp"
                android:layout_margin="3dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/sid1_new1" />

            </FrameLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Siddharth"
                    android:layout_gravity="left"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:textColor="#000"/>
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_sid"
                    android:textAlignment="viewStart"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:textColor="@color/Dark_grey_text"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="2dp"
            android:background="@drawable/text_background"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunny"
                    android:layout_gravity="right"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:textColor="#000"/>
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_sunny"
                    android:textAlignment="viewEnd"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:textColor="@color/Dark_grey_text"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="140dp"
                android:layout_margin="3dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/sun1_new" />
            </FrameLayout>
        </LinearLayout>
       </LinearLayout>
</ScrollView>
